# fastapi-auth

./: .env.sample  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 1ea8be17f127_added_deleted_at_column_in_abstract.py  2df95b6fa086_added_abstract_model_and_user_model.py
app/: main.py
app/api/: docs.py  routers.py
app/api/v1/: routers.py
app/api/v2/: routers.py
app/core/: configs.py  exception_handlers.py  exceptions.py  logging_config.py
app/users/: dependencies.py  proto.py  routers.py
app/users/models/: __init__.py  permissions.py  refresh_token.py  users.py
app/users/schemas/: user.py
app/users/services/: user.py
base/: camelize.py  configs.py  exception_handlers.py  exceptions.py  logging_config.py  models.py  openapi_config.py  response.py  schemas.py
base/apis/: base.py  routers.py
base/repos/: base.py
base/utils/: hashing.py
base/utils/pagination/: __init__.py  base.py  cursor.py  limit_offset.py
db/: config.py  model_registry.py  repl_utils.py  session.py
